[package]
name = "analyzer-frontend"
version = "0.1.0"
authors = ["Ritiek Malhotra <ritiekmalhotra123@gmail.com>"]
edition = "2021"
description = "Analyse Bombsquad Replay Files"
repository = "https://github.com/ritiek/bs-replay-analyzer"
readme = "README.md"
keywords = ["bombsquad", "replay", "api"]
# categories = ["multimedia::audio", "command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"

[dependencies]
libanalyze = { path = "./libanalyze", version = "0.1" }
tokio = { version = "1.32", features = ["full"] }
poem = { version = "1.3", features = ["compression", "multipart"] }
async-tempfile = "0.4"
fastrand = "2.0"
brp-tool = { path = "/home/ritiek/Downloads/brptool", version = "0.1", features = ["async"] }

# [[bin]]
# name = "analyzer-frontend"
