[package]
name = "libanalyze"
version = "0.1.0"
authors = ["Ritiek Malhotra <ritiekmalhotra123@gmail.com>"]
edition = "2021"
description = "Analyse Bombsquad Replay Files"
repository = "https://github.com/ritiek/bs-replay-analyzer"
readme = "README.md"
keywords = ["bombsquad", "replay", "api"]
# categories = ["multimedia::audio", "command-line-utilities"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cc = "1.0"

[dependencies]
rust-strings = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

# [[bin]]
# name = "analyze"
